[package]
name = "sgx_fs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sgx_tstd = { path = "../incubator-teaclave-sgx-sdk/sgx_tstd" }
# sgx_tstd = {path = "/root/tmp/incubator-teaclave-sgx-sdk/sgx_tstd"}
# sgx_types = {path = "/root/tmp/incubator-teaclave-sgx-sdk/sgx_types"}
sgx_tstd = { path = "/root/sgx/sgx_tstd" }
sgx_types = { path = "/root/sgx/sgx_types" }
